<resources>
    <string name="app_name">MaitreApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Prepare">Prepare</string>
    <string name="addFood">Add Food</string>
    <string name="clear">Clear</string>
    <string name="Mappa">Mappa</string>
    <string name="mappa">Map</string>
    <string name="expose">Expose</string>
    <string name="consult">Consult</string>
    <string name="title">Butler Robot</string>
</resources>
